--- a/demo/index.html
+++ b/demo/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
 
     <!-- CSS for demo page -->
     <style>
@@ -47,9 +47,11 @@
         </div>
 
         <div class="form-group">
-            <label for="exampleInput4">Input field which uses input group addon</label>
+            <label for="exampleInput4">Input field which uses input group prepend</label>
             <div class="input-group">
-                <div class="input-group-addon">€</div>
+                <div class="input-group-prepend">
+                    <div class="input-group-text">€</div>
+                </div>
                 <input type="text" class="form-control" id="exampleInput4">
             </div>
         </div>
@@ -57,10 +59,8 @@
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 
-    <!-- jQuery first, then Tether, then Bootstrap JS. -->
-    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+    <!-- jQuery is needed -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 
     <!-- add JS plugin -->
     <script src="../bootstrap4-input-clearer.js"></script>
